crates/math-core/tests/snapshots/error_test__right_with_non_delimiter.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\left( 1 \\right x"
---
Position: 16..17
ExpectedDelimiter {
    location: Right,
    got: Letter(
        'x',
        True,
    ),
}
