crates/math-core/tests/snapshots/error_test__sideset_not_mathop.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sideset{}{}{a}"
---
Error: Expected a large operator.
   ╭─[ <input>:1:14 ]
   │
 1 │ \sideset{}{}{a}
   │              ┬  
   │              ╰── expected a large operator
───╯
