crates/math-core/tests/snapshots/error_test__sideset_not_mathop_2.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sideset{}{}{+}"
---
Error: Expected a large operator.
   ╭─[ <input>:1:14 ]
   │
 1 │ \sideset{}{}{+}
   │              ┬  
   │              ╰── expected a large operator
───╯
