crates/math-core/tests/snapshots/error_test__sideset_not_mathop_5.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sideset{}{}{\\sum \\sum}"
---
Error: Expected exactly one token as argument.
   ╭─[ <input>:1:13 ]
   │
 1 │ \sideset{}{}{\sum \sum}
   │             ─────┬─────  
   │                  ╰─────── expected exactly one token here
───╯
