crates/math-core/tests/snapshots/error_test__sout_in_math_mode.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sout{abc}"
---
Error: Not valid in math mode.
   ╭─[ <input>:1:1 ]
   │
 1 │ \sout{abc}
   │ ──┬──  
   │   ╰──── this is not valid in math mode
───╯
